--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <title>Abdul Saif Babu | Sr. Automation QA & RPA Engineer</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -96,7 +97,7 @@
     .contacts a { color: var(--primary); font-weight: 500; margin: 0 1em; text-decoration:none; }
     .contacts a:hover { text-decoration: underline;}
     .cert-list { color: var(--gray);}
-    .achievements-list li::before {content: '\\272A '; color: var(--primary);}
+    .achievements-list li::before {content: '\272A';}
     footer {
       background: var(--navbg); color: #fff;
       text-align: center; padding: 2.5rem 0 1.5rem;
@@ -126,11 +127,11 @@
     <h1>Abdul Saif Babu</h1>
     <h2>Senior Automation QA &amp; RPA Engineer</h2>
     <div class="links">
-      <a href="mailto:abdul.saifbabu@gmail.com"><span class="material-icons" style="vertical-align:middle;">email</span> Email</a>
-      <a href="tel:+19803559506"><span class="material-icons" style="vertical-align:middle;">call</span> (980) 355-9506</a>
-      <a href="https://github.com/saifsahil3" target="_blank"><span class="material-icons" style="vertical-align:middle;">code</span> GitHub</a>
-      <a href="https://medium.com/@saifsahil" target="_blank"><span class="material-icons" style="vertical-align:middle;">rss_feed</span> Medium</a>
-      <a href="https://botstore.automationanywhere.com/vendor/ssbots/" target="_blank"><span class="material-icons" style="vertical-align:middle;">extension</span> Bot Store</a>
+      <a href="mailto:abdul.saifbabu@gmail.com"><span class="material-icons" style="vertical-align:middle;">email</span></a>
+      <a href="https://www.linkedin.com/in/abdul-saif-babu-132629b4/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/saifsahil3" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://medium.com/@saifsahil" target="_blank"><span class="material-icons" style="vertical-align:middle;">rss_feed</span></a>
+      <a href="https://botstore.automationanywhere.com/vendor/ssbots/" target="_blank"><span class="material-icons" style="vertical-align:middle;">extension</span></a>
     </div>
   </header>
   <div class="main">
@@ -145,10 +146,11 @@
       <h2>Skills &amp; Expertise</h2>
       <div class="skills-list">
         <div><strong>Automation & QA:</strong> Selenium, Playwright, TestNG, BDD, API Automation, Robot Framework</div>
-        <div><strong>RPA Tools:</strong> Automation Anywhere, Appian RPA, Python frameworks</div>
-        <div><strong>Programming:</strong> Java, Python, Go, TypeScript</div>
-        <div><strong>Cloud & Infra:</strong> AWS, Kubernetes, Docker, Terraform, Jenkins</div>
-        <div><strong>DevOps:</strong> Jenkins, Git, ArgoCD, Jira</div>
+        <div><strong>RPA Tools:</strong> Automation Anywhere,UIPath, Appian RPA, Python frameworks</div>
+        <div><strong>Programming:</strong> Java, Python, TypeScript, Golang</div>
+        <div><strong>Cloud:</strong> AWS(EC2, S3, SQS, SNS, Cloudwatch, Lambda, EKS, Codepipeline), Azure, GCP, OTCloud</div>
+        <div><strong>Infrastructure:</strong> Serverless, Kubernetes, Docker, Terraform</div>
+        <div><strong>DevOps:</strong> Jenkins, Git, ArgoCD</div>
         <div><strong>Databases:</strong> MySQL, Oracle SQL, PostgreSQL</div>
         <div><strong>Mgmt.:</strong> Agile, Scrum, Kanban, Waterfall, HP ALM</div>
       </div>
@@ -156,8 +158,8 @@
       <!-- --- EXPERIENCE SECTION: MODERN TIMELINE & SLIDER --- -->
 <!-- --- EXPERIENCE SECTION: MODERN TIMELINE & SLIDER --- -->
 <!-- --- EXPERIENCE SECTION: MODERN TIMELINE & SLIDER --- -->
-<section id="experience" style="background: (--bg); padding: 3rem 2rem; border-radius: 1rem; max-width: 1020px; margin: 3rem auto; box-shadow: 0 8px 32px rgba(0,0,0,0.6);">
-  <h2 style="color: #d9b310; font-weight: 700; margin-bottom: 1.5rem;">Professional Experience</h2>
+<section id="experience" style="background: var(--bg); padding: 3rem 2rem; border-radius: 1rem; max-width: 1020px; margin: 3rem auto; box-shadow: 0 8px 32px rgba(0,0,0,0.2);">
+  <h2 style="color: var(--primary); font-weight: 700; margin-bottom: 1.5rem;">Professional Experience</h2>
   <div class="timeline-container" style="position: relative; padding-top: 38px;">
     <!-- Timeline Bar + Dots -->
     <div class="exp-timeline" style="position: absolute; top:0; left:0; right:0; height:38px; pointer-events:none;">
@@ -174,10 +176,10 @@
     </div>
     <!-- Slider of Experience Cards -->
     <div class="experience-slider" style="display: flex; overflow-x: auto; scroll-behavior: smooth; gap: 1.3rem; padding-top:56px; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch;">
-      <div class="experience-card" data-index="0"><h3>College Board</h3><div class="date">Sr QA Engineer</div><ul><li>Developed web automation with Playwright (TypeScript).</li><li>Automated AWS cost reporting (Lambda, CDK).</li><li>Integrated accessibility tools and cloud monitoring.</li></ul></div>
-      <div class="experience-card" data-index="1"><h3>USAC</h3><div class="date">Sr RPA & Automation Engineer</div><ul><li>Built Appian RPA frameworks from scratch.</li><li>Led tool evaluation & migration.</li><li>Automated SQL, document workflows.</li></ul></div>
+      <div class="experience-card" data-index="0"><h3>College Board</h3><div class="date">Sr QA Engineer</div><ul><li>Managing 5 automation repositories on various platforms for 3 applications.</li><li>Built automated AWS cost reporting, CICD automation flows.</li><li>Integrated accessibility tools into UI Automation suite.</li></ul></div>
+      <div class="experience-card" data-index="1"><h3>USAC</h3><div class="date">Sr RPA & Automation Engineer</div><ul><li>Built and lead Appian RPA frameworks from scratch.</li><li>Led tool evaluation & migration.</li><li>Automated SQL, document workflows.</li></ul></div>
       <div class="experience-card" data-index="2"><h3>Rocket Software</h3><div class="date">SDET Engineer</div><ul><li>Led infra validation automation for hyperautomation platforms.</li><li>Built Python & Golang frameworks for Kubernetes/AWS.</li></ul></div>
-      <div class="experience-card" data-index="3"><h3>OpenText</h3><div class="date">Sr. Automation QA Engineer</div><ul><li>Led QA team and managed automation strategy.</li><li>Improved test coverage by 26% with new API automation.</li><li>Ensured secure cloud integrations.</li></ul></div>
+      <div class="experience-card" data-index="3"><h3>OpenText</h3><div class="date">Sr. Automation QA Engineer</div><ul><li>Led QA team and managed automation strategy.</li><li>Improved test coverage by 26% with new API automation.</li><li>Built multiple automation suites for different CMIS connectors on various platforms.</li></ul></div>
       <div class="experience-card" data-index="4"><h3>Deloitte</h3><div class="date">Automation & RPA Engineer</div><ul><li>Developed and deployed RPA bots (saved 80% manual effort).</li><li>Built in-house automation tools; led POCs.</li><li>Boosted web test coverage from 60% to 85%.</li></ul></div>
       <div class="experience-card" data-index="5"><h3>Capgemini</h3><div class="date">Associate Consultant</div><ul><li>Expertise in ClaimCenter 8, integration and batch automation.</li><li>Created reusable scripts and handled end-to-end QA processes.</li></ul></div>
     </div>
@@ -437,27 +439,26 @@
     });
   })();
 </script>
-    <section id="projects">
-      <h2>Notable Projects & Contributions</h2>
-      <ul class="projects-list">
-        <li>Automated Deloitte invoice processing (80% manual effort saved).</li>
-        <li>Developed Rocket Software infra tools, shrinking QA cycle by 70%.</li>
-        <li>Published RPA bots on Automation Anywhere Bot Store (500+ downloads).</li>
-      </ul>
-    </section>
     <section id="certifications">
-      <h2>Certifications & Education</h2>
+      <h2>Certifications</h2>
       <ul class="cert-list">
-        <li>Automation Anywhere Advanced, AINS, ISTQB, GitOps for Argo</li>
+        <li>Automation Anywhere - Advanced Developer</li>
+        <li>AINS 21 - Property & Casualty Insurance</li>
+        <li>ISTQB - Certified Tester Foundation Level</li>
+        <li>GitOps for Argo by ArgoCD</li>
+        </ul>
+      <h2>Education</h2>
+      <ul class="cert-list">
         <li>B.Tech, Electronics and Communication Engineering (JNTUK, India)</li>
+        </ul>
       </ul>
     </section>
     <section>
       <h2>Achievements & Awards</h2>
       <ul class="achievements-list">
-        <li>Multiple delivery and innovation awards (Applause, Spot, Extra Mile)</li>
+        <li>Received Multiple delivery and innovation awards (Applause, Spot, Extra Mile, accessibility Champion etc)</li>
         <li>Ideathon finalist (Virtual Assistant device)</li>
-        <li>Freeware automation tools with 500+ downloads</li>
+        <li>Built mobile automation tools with 500+ downloads</li>
       </ul>
     </section>
     <section id="contact" class="contacts">
@@ -473,3 +474,5 @@
   </footer>
 </body>
 </html>
+
+
